--- a/index.html
+++ b/index.html
@@ -1,11 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+Perfect! Let’s create a **concrete, real-time example project** so you can **clearly see how branches, commits, and merge strategies work** in DevOps.
+
+---
+
+## **Project Setup Example**
+
+### **Scenario**
+
+* Project: `Dashboard_sample_Testing`
+* Main branch: `main`
+* Team: 3 developers
+
+  * **Yaswanth** → feature/login
+  * **Ksekhar** → feature/shopping-cart
+  * **DevOps** → release prep
+
+---
+
+### **Step 1: Create new branches from main**
+
+```bash
+# From main
+git checkout main
+
+# Small feature by Yaswanth
+git checkout -b feature/login-button
+
+# Big team feature by Ksekhar
+git checkout main
+git checkout -b feature/shopping-cart
+
+# Release preparation branch
+git checkout main
+git checkout -b release/v1.2.0
+```
+
+---
+
+### **Step 2: Commits in branches**
+
+#### **feature/login-button**
+
+```
+C1: Add login form
+C2: Validate input
+C3: Add error messages
+```
+
+#### **feature/shopping-cart**
+
+```
+C4: Add cart page layout
+C5: Connect cart API
+C6: Add cart summary
+```
+
+#### **release/v1.2.0**
+
+```
+C7: Merge latest main features
+C8: Final bug fixes for release
+```
+
+---
+
+### **Step 3: Merge strategies**
+
+| Branch                | Merge strategy | Result in main                   |
+| --------------------- | -------------- | -------------------------------- |
+| feature/login-button  | Squash & Merge | Single commit `S1` (clean main)  |
+| feature/shopping-cart | Merge Commit   | All commits C4, C5, C6 + merge M |
+| release/v1.2.0        | Rebase & Merge | Linear commits C7', C8'          |
+
+---
+
+### **Step 4: Main branch after merges**
+
+```
+main
+  |
+  |-- S1 (login-button, squashed)
+  |
+  |-- C4 -- C5 -- C6 -- M (shopping-cart, merge commit)
+  |
+  |-- C7' -- C8' (release prep, rebased linear)
+```
+
+---
+
+### ✅ **Key takeaways**
+
+1. **Branch naming matters** (`feature/*`, `release/*`, `hotfix/*`)
+2. **Merge strategy depends on scenario** (daily small PR, big team feature, release prep)
+3. **Pre-commit hooks** and `.gitignore` help enforce rules **before merge**
+4. **Branches can be deleted** after merge to keep repo clean
+
+---
+
+If you want, I can make a **visual diagram of this project**, showing **branches, commits, merges, and strategies** all in one picture—like a real DevOps workflow map.
+
+Do you want me to make that diagram?
